Ajout de display block dans le footer pour aligné les élement tous en le centrant et qu'une partie sois à gauche et droite. puis modification du header pour visit et la localisation passage en display block pour réparer les bugs

--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -88,3 +88,16 @@ footer p {
     word-wrap: break-word;
     margin: auto; /* Add this line to center the element horizontally */
 }
+
+#bar {
+    display: flex;
+    width: 297px;
+    height: 2px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    margin: 0 auto; /* Added margin property to center the barre */
+    margin-top: -10px;
+    z-index: 1;
+    margin-top: 5px;
+}
