--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -120,25 +120,37 @@ header h2 {
     flex-shrink: 0;
     z-index: 2;
     position: absolute;
-    top: 565px;
-    left: 25px;
-    right: 330px;
+   
 }
 header h3 {
     color: #FFF;
-    font-family: "mulish";
-    font-size: 17px;
+    font-family: "mulish", sans-serif;
+    font-weight: 300;
+    font-size: 15px;
     font-style: normal;
     line-height: 100%;
     width: 291px;
     height: 1px;
     flex-shrink: 0;
     position: absolute;
-    top: 550px;
-    left: 60px; /* Updated left position */
-    right: auto; /* Removed right position */
     display: flex;
-    margin-left: 20px;
-    font-weight: 400;
     line-height: 100%;
 }
+
+.logo-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.le {
+    text-align: left;
+    margin-left: 52px;
+    margin-top: 37px;
+  }
+  
+  .ri {
+    text-align: left;
+    margin-left: 10px;
+    margin-top: 50px;
+  }
